Rapid Prd/src/objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>AE_Calculator_Average__c</fullName>
        <formula>Opportunity__r.AE_Calculator_Average__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Calculator Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE_Calculator_Gross_Monthly_Sales__c</fullName>
        <formula>Opportunity__r.Gross_monthly_sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Calculator Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_In_Rrisk__c</fullName>
        <formula>if( Opportunity__r.Account_In_Risk__c, &quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account In Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Advances_Location_2_and_3__c</fullName>
        <formula>&quot;Location 2:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account_Name__r.Location_2_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account_Name__r.Location_2_Address__c &amp; BR()
&amp; &quot;    Phone:&quot;&amp;   Account_Name__r.Location_2_Phone_Number__c  &amp; BR()
&amp; &quot;    Fax:&quot;&amp;  Account_Name__r.Location_2_Fax_Number__c  &amp; BR()
&amp; &quot;    Landlord Name:&quot;&amp;   Account_Name__r.Location_2_Landlord_Contact_Name__c  &amp; BR() 
&amp; &quot;    Landlord Phone:&quot;&amp;   Account_Name__r.Location_2_Landlord_Phone_Number__c  &amp; BR() &amp; BR()
&amp; &quot;Location 3:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account_Name__r.Location_3_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account_Name__r.Location_3_Address__c &amp; BR()
&amp; &quot;    Phone:&quot;&amp;   Account_Name__r.Location_3_Phone_Number__c  &amp; BR()
&amp; &quot;    Fax:&quot;&amp;  Account_Name__r.Location_3_Fax_Number__c  &amp; BR() 
&amp; &quot;    Landlord Name:&quot;&amp;   Account_Name__r.Location_3_Landlord_Contact_Name__c  &amp; BR() 
&amp; &quot;    Landlord Phone:&quot;&amp;   Account_Name__r.Location_3_Landlord_Phone_Number__c  &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Advances Location 2 and 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Advances_Location_4_and_5__c</fullName>
        <formula>&quot;Location 4:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account_Name__r.Location_4_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account_Name__r.Location_4_Address__c &amp; BR()
&amp; &quot;    Phone:&quot;&amp;   Account_Name__r.Location_4_Phone_Number__c  &amp; BR()
&amp; &quot;    Fax:&quot;&amp;  Account_Name__r.Location_4_Fax_Number__c  &amp; BR() 
&amp; &quot;    Landlord Name:&quot;&amp;   Account_Name__r.Location_4_Landlord_Contact_Name__c  &amp; BR() 
&amp; &quot;    Landlord Phone:&quot;&amp;   Account_Name__r.Location_4_Landlord_Phone_Number__c  &amp; BR() &amp; BR()
&amp; &quot;Location 5:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account_Name__r.Location_1_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account_Name__r.Location_1_Address__c &amp; BR() 
&amp; &quot;    Phone:&quot;&amp;   Account_Name__r.Location_1_Phone_Number__c  &amp; BR()
&amp; &quot;    Fax:&quot;&amp;  Account_Name__r.Location_1_Fax_Number__c  &amp; BR()
&amp; &quot;    Landlord Name:&quot;&amp;   Account_Name__r.Location_1_Landlord_Contact_Name__c  &amp; BR() 
&amp; &quot;    Landlord Phone:&quot;&amp;   Account_Name__r.Location_1_Landlord_Phone_Number__c  &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Advances Location 4 and 5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Info__c</fullName>
        <formula>&quot;Additional Contact Info:&quot;&amp; BR() 
&amp; &quot;Full Name: &quot;&amp; Contact__r.Principal_2_First_Name__c &amp; &quot; &quot; &amp; Contact__r.Principal_2_Last_Name__c &amp; BR() 
&amp; &quot;Ownership: &quot;&amp; text(Contact__r.Principal_2_Percent_Ownership__c*100)&amp;&quot;%&quot;&amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Contact__r.Principal_2_Street_Address__c &amp; BR() 
&amp; Contact__r.Principal_2_City__c &amp;&quot;, &quot;&amp; Contact__r.Principal_2_State__c &amp;&quot; &quot;&amp; Contact__r.Principal_2_Zip__c &amp; BR() 
&amp; &quot;Phone: &quot;&amp; Contact__r.Principal_2_Phone__c &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; Contact__r.Principal_2_Mobile__c &amp; BR() 
&amp; &quot;Email: &quot;&amp; Contact__r.Principal_2_Email__c &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Deal_Info__c</fullName>
        <formula>&quot;Estimated Daily Repay: $&quot;&amp; text(round(Opportunity__r.Estimated_Daily_Repay__c,2)) &amp;BR()
&amp;&quot;Estimated Days to Repay:&quot;&amp; text(Opportunity__r.Estimated_Days_to_Repay__c) &amp;BR()
&amp;&quot;Loan Term (Days):&quot;&amp; text(Opportunity__r.Loan_Term_Days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Deal Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_References__c</fullName>
        <label>Additional References:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AddressOnCheckIf_no_please_explain__c</fullName>
        <label>If, no please explain</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_Bank_Statement__c</fullName>
        <label>Address on Check Match Bank Statement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NA Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_CC_statements__c</fullName>
        <label>Address on Check Match CC statements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA Loan</fullName>
                </value>
                <value>
                    <fullName>NA Renewal</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_FRSA__c</fullName>
        <label>Address on Check Match FRSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advance_ID__c</fullName>
        <formula>Opportunity__r.Advance_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Approved_With_Conditions_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Approved With Conditions Met:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_CC_sales_Avg_4_Mo_times_12__c</fullName>
        <formula>12* Opportunity__r.QC_Calculator_Average__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual CC sales (Avg 4 Mo. times 12):</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Gross_sales_Avg_2_Mo_times_12__c</fullName>
        <formula>6*( Opportunity__r.Month_Average_Gross_Sale_1__c + Opportunity__r.Month_Average_Gross_Sales_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Gross sales (Avg 2 Mo. times 12):</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_delinquencies_in_the_rental_payment__c</fullName>
        <label>Any delinquencies in the rental payment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_1_FICO__c</fullName>
        <formula>if(isblank(Opportunity__r.cc_Applicant_1_FICO__c), Opportunity__r.Manual_Applicant_1_FICO__c ,if(AND(OR(Opportunity__r.cc_Applicant_1_FICO__c&lt;=0,Opportunity__r.cc_Applicant_1_FICO__c&gt;900),Not(isblank(Opportunity__r.Manual_Applicant_1_FICO__c))), Opportunity__r.Manual_Applicant_1_FICO__c ,Opportunity__r.cc_Applicant_1_FICO__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant #1 FICO:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_2_FICO__c</fullName>
        <formula>Opportunity__r.Applicant_2_FICO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant #2 FICO:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_With_Conditions__c</fullName>
        <label>Approved With Conditions:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_there_any_Competitor_Debits__c</fullName>
        <formula>text(Opportunity__r.Are_there_any_Competitor_Debits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are there any Competitor Transactions?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_any_Odd_Large_Deposits__c</fullName>
        <formula>text(Opportunity__r.Are_there_any_Odd_Large_Deposits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are there Odd Big Deposits or Transfers?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_late_with_any_of_your_vendors__c</fullName>
        <label>Are you late with any of your vendors?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_UW_Time__c</fullName>
        <formula>if 

( isnull ( Opportunity__r.Data_Entry_Date__c ) ,NULL , 


IF

(ABS((UW_Assigned_Date_Stamp__c - Opportunity__r.Data_Entry_Date__c)*24)&gt;10,

ABS(((UW_Assigned_Date_Stamp__c - Opportunity__r.Data_Entry_Date__c)*24)-14),


(UW_Assigned_Date_Stamp__c - Opportunity__r.Data_Entry_Date__c)*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign UW Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Decisioned_By__c</fullName>
        <label>Auto Decisioned By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AH</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EG</fullName>
                </value>
                <value>
                    <fullName>EH</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>KD</fullName>
                </value>
                <value>
                    <fullName>LL</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Daily_Repay__c</fullName>
        <label>Avg. Daily Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Ticket__c</fullName>
        <formula>text( Opportunity__r.Average_Ticket__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Ticket:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAM__c</fullName>
        <formula>text( Opportunity__r.BAM_Match_Selection__c )</formula>
        <label>BAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Opportunity__r.Billing_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Alert_Count__c</fullName>
        <formula>Opportunity__r.BA_Business_Alert_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Alert Count:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies_Additional_Notes__c</fullName>
        <label>Business Bankruptcies Additional Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies__c</fullName>
        <label>Business Bankruptcies:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <formula>text( Opportunity__r.Business_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Category:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Judgements__c</fullName>
        <formula>text( Opportunity__r.Business_Judgements__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Judgements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_On_Check_Reference__c</fullName>
        <label>Business Name On Check Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Name</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Open_Date__c</fullName>
        <formula>Opportunity__r.Business_Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Open Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Type__c</fullName>
        <formula>text(Opportunity__r.Business_Open_Tax_Lien_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Open Tax Lien Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Liens__c</fullName>
        <formula>text(Opportunity__r.Business_Open_Tax_Liens__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Tax Liens Outstanding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <formula>text(Opportunity__r.Business_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Lien_Date_Filed__c</fullName>
        <formula>Opportunity__r.Business_Tax_Lien_Date_Filed__c</formula>
        <label>Date(s) Lien Filed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_category_alert__c</fullName>
        <formula>Opportunity__r.QC_Business_Category_Alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business category alert:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_name_on_check_match_contract__c</fullName>
        <formula>text( Opportunity__r.Business_name_check_match_contract__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business name on check match contract?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Add_l_Signer_Email__c</fullName>
        <label>Called Confirmed Add&apos;l Signer Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Add_l_Signer_Number__c</fullName>
        <label>Called Confirmed Add&apos;l Signer Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Contact_Email__c</fullName>
        <label>Called Confirmed Contact Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Contact_Number__c</fullName>
        <label>Called Confirmed Contact Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_on_Business_Sale_Response__c</fullName>
        <label>Comments on Business Sale Response:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <formula>Opportunity__r.Competitor_Advance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Advance Company:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Add_l_Signer_Number__c</fullName>
        <formula>&quot;Phone: &quot;&amp;text(Opportunity__r.Confirmed_Add_l_Signer_Phone_Number__c	) &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; text(Opportunity__r.Confirmed_Add_l_Signer_Mobile_Number__c	 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Add&apos;l Signer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Business_Information_from_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Business Information from QC:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Contact_Number__c</fullName>
        <formula>&quot;Phone: &quot;&amp; text(Opportunity__r.Confirmed_Contact_Phone_Number__c ) &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; text(Opportunity__r.Confirmed_Contact_Mobile_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_FRSA_Dates__c</fullName>
        <label>Confirmed FRSA Dates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Information_From_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Information From QC:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Loan_Docs_Dates__c</fullName>
        <label>Confirmed Loan Docs Dates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Loan_Docs_Signature__c</fullName>
        <label>Confirmed Loan Docs Signature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Westlaw_real_property_search__c</fullName>
        <formula>text( Opportunity__r.Confirmed_Westlaw_real_property_search__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Westlaw real property search?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_legal_name_in_Westlaw__c</fullName>
        <formula>text( Opportunity__r.Confirmed_legal_name_in_Westlaw__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed legal name in Westlaw?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_principal_owner_s_in_Westlaw__c</fullName>
        <formula>text( Opportunity__r.CH_Business_Ownership_Confirmed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed principal owner(s) in Westlaw?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Alert__c</fullName>
        <formula>Opportunity__r.QC_Conditional_Criteria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Related_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Related Reporting</label>
        <referenceTo>Credit_Related_Reporting__c</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria_Decision__c</fullName>
        <formula>Opportunity__r.EC_Criteria_Decision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Decision:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Processor__c</fullName>
        <formula>text( Opportunity__r.Current_Processor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Processor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ROI__c</fullName>
        <label>Current % ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Repriced_Need_New_FRSA__c</fullName>
        <label>Deal Repriced - Need New FRSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <label>Decline Reason:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAM Hit Match</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy Filed w/No Discharge</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy filing w/in 1yr</fullName>
                </value>
                <value>
                    <fullName>Below Minimum Proprietary Score</fullName>
                </value>
                <value>
                    <fullName>Bus. Mtg. Under Modification Agreement</fullName>
                </value>
                <value>
                    <fullName>Business for Sale</fullName>
                </value>
                <value>
                    <fullName>Cannot pledge future receivables</fullName>
                </value>
                <value>
                    <fullName>Closed for Renovations</fullName>
                </value>
                <value>
                    <fullName>Credit Related</fullName>
                </value>
                <value>
                    <fullName>Do Not Renew</fullName>
                </value>
                <value>
                    <fullName>Do Not Renew-Account in Risk</fullName>
                </value>
                <value>
                    <fullName>Excessive NSFs</fullName>
                </value>
                <value>
                    <fullName>Failed Site Inspection</fullName>
                </value>
                <value>
                    <fullName>High Risk Business</fullName>
                </value>
                <value>
                    <fullName>HIGH RISK Business (Prohibited List)</fullName>
                </value>
                <value>
                    <fullName>HIGH RISK Business (Restricted List)</fullName>
                </value>
                <value>
                    <fullName>HIGH RISK Business Tender Shift</fullName>
                </value>
                <value>
                    <fullName>High Risk-Confirmed Eviction Filings</fullName>
                </value>
                <value>
                    <fullName>High Risk-Confirmed Interview</fullName>
                </value>
                <value>
                    <fullName>High Risk-Discrepancies w/Leasing Tenant</fullName>
                </value>
                <value>
                    <fullName>High Risk-Discrepencies with ownership</fullName>
                </value>
                <value>
                    <fullName>High Risk-Documentation Discrepencies</fullName>
                </value>
                <value>
                    <fullName>High Risk-Insufficient Bank Statement(s)</fullName>
                </value>
                <value>
                    <fullName>High Risk-Merchant not a signer on Lease</fullName>
                </value>
                <value>
                    <fullName>High Risk-Merchant Not on Lease Agreemt</fullName>
                </value>
                <value>
                    <fullName>High Risk-Merchant Refuses Call to LL</fullName>
                </value>
                <value>
                    <fullName>High Risk-Multiple Active Legal Entities</fullName>
                </value>
                <value>
                    <fullName>High Risk-Unable to support split</fullName>
                </value>
                <value>
                    <fullName>Month over Month decline in CC Volume</fullName>
                </value>
                <value>
                    <fullName>Month over Month decline in gross volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_foresee_the_merchant_closing__c</fullName>
        <label>Do you foresee the merchant closing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_website_if_available__c</fullName>
        <formula>Opportunity__r.Merchant_website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchant website?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_contracts_with_customers__c</fullName>
        <label>Do you have contracts with customers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_own_any_other_businesses__c</fullName>
        <label>Do you own any other businesses?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_plan_to_sell_the_business_soon__c</fullName>
        <label>Do you plan to sell the business soon?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_The_Business_Location__c</fullName>
        <formula>text( Opportunity__r.Does_Merchant_Own_The_Business_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Merchant Own The Business Location?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_Merchant_Own_Their_Home__c</fullName>
        <label>Does the Merchant Own Their Home?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Photo_ID__c</fullName>
        <formula>text( Opportunity__r.Eligible_Photo_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Photo ID</label>
        <type>Text</type>
    </fields>
</CustomObject>